# Routing_and_Placement

./: .gitignore  CMakeLists.txt  Makefile  README.md
file/: Calcdifference.cpp  modified1.txt  modified2.txt  nomodified.txt  prob1.txt  prob1.txtout.txt  prob2.1.txt  prob2.2.txt  prob3.txt  prob4.txt  prob4.txtout.txt  testAstar.txt  testAstar.txtout.txt
projectfile/: pjfile.docx
src/: Astar.cpp  Astar.h  FM.h  FM_Algorithm.cpp  FM_Algorithm.h  Point.h  Routing.cpp  Routing.h  data_structure.h  main.cpp  parser.cpp  parser.h
